// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: Order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
  ],
  "orderMode": null,
  "orderNum": "001",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": null,
  "serviceFee": null,
  "serviceFeePolicy": null,
  "servingMode": null,
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 186,
    "tax": 0,
    "taxSum": 0,
  },
  "tip": null,
  "tipPolicy": null,
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": null,
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": 1,
  "visitId": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: Takeaway order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
  ],
  "orderMode": null,
  "orderNum": "003",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": null,
  "serviceFee": null,
  "serviceFeePolicy": null,
  "servingMode": "takeAway",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 186,
    "tax": 0,
    "taxSum": 0,
  },
  "tip": null,
  "tipPolicy": null,
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": null,
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": 1,
  "visitId": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail in case the cart is not the user's 1`] = `"Cart is missing"`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail without a cart 1`] = `[Error: Cart is missing: test_NOT_EXSISTING_CART]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with resolver function: fail without a unit 1`] = `[Error: GraphQL error: Unit DIFFERENT_UNITID in the cart cannot be fetched from the database.]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: Order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
  ],
  "orderMode": null,
  "orderNum": "001",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": null,
  "serviceFee": null,
  "serviceFeePolicy": null,
  "servingMode": null,
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 186,
    "tax": 0,
    "taxSum": 0,
  },
  "tip": null,
  "tipPolicy": null,
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": null,
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": 1,
  "visitId": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: Takeaway order content 1`] = `
Object {
  "archived": false,
  "createdAt": Any<String>,
  "currentStatus": "none",
  "externalId": null,
  "guestLabel": null,
  "hasRated": null,
  "id": "MASKED ID",
  "items": Array [
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": null,
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "allergens": Array [
        "treenuts",
      ],
      "configSets": Array [
        Object {
          "items": Array [
            Object {
              "allergens": Array [
                "egg",
                "fish",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": 10,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0101",
            },
            Object {
              "allergens": Array [
                "egg",
                "gluten",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0102",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_01",
          "type": "modifier",
        },
        Object {
          "items": Array [
            Object {
              "allergens": null,
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 10,
              "productComponentId": "PRODUCT_COMPONENT_ID_0201",
            },
            Object {
              "allergens": Array [
                "peanut",
              ],
              "externalId": null,
              "name": Object {
                "de": "DE_NAME",
                "en": "EN_NAME",
                "hu": "HU_NAME",
              },
              "netPackagingFee": null,
              "price": 20,
              "productComponentId": "PRODUCT_COMPONENT_ID_0202",
            },
          ],
          "name": Object {
            "de": "DE_NAME",
            "en": "EN_NAME",
            "hu": "HU_NAME",
          },
          "productSetId": "PRODUCTSET_ID_02",
          "type": "modifier",
        },
      ],
      "created": null,
      "externalId": null,
      "image": null,
      "laneId": "test_lane_1_id",
      "netPackagingFee": null,
      "priceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "productId": "seeded_unit_product_1_id",
      "productName": Object {
        "de": null,
        "en": "Water",
        "hu": "Viz",
      },
      "productType": "food",
      "quantity": 2,
      "serviceFee": null,
      "statusLog": Array [
        Object {
          "status": "placed",
          "ts": 1234,
          "userId": "test_user_1_id",
        },
      ],
      "sumPriceShown": Object {
        "currency": "EUR",
        "pricePerUnit": 1,
        "priceSum": 2,
        "tax": 0,
        "taxSum": 0,
      },
      "variantId": "test_UnitProductVariant_id_1",
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
  ],
  "orderMode": null,
  "orderNum": "003",
  "orderPolicy": null,
  "packagingFeeTaxPercentage": null,
  "packagingSum": null,
  "paymentIntention": null,
  "paymentMode": Object {
    "caption": null,
    "method": "inapp",
    "type": "stripe",
  },
  "place": Object {
    "seat": "SEAT",
    "table": "TABLE",
  },
  "rating": null,
  "ratingPolicies": null,
  "serviceFee": null,
  "serviceFeePolicy": null,
  "servingMode": "takeAway",
  "soldOutVisibilityPolicy": null,
  "statusLog": Array [
    Object {
      "status": "none",
      "ts": "MASKED TIMESTAMP",
      "userId": "testuser+test",
    },
  ],
  "sumPriceShown": Object {
    "currency": "EUR",
    "pricePerUnit": 0,
    "priceSum": 186,
    "tax": 0,
    "taxSum": 0,
  },
  "tip": null,
  "tipPolicy": null,
  "tipTransaction": null,
  "tipTransactionId": null,
  "tipTransactionStatus": null,
  "transaction": null,
  "transactionId": null,
  "transactionStatus": null,
  "unitId": "test_unit_1_id",
  "unpayCategory": null,
  "updatedAt": Any<String>,
  "userId": "testuser+test",
  "version": 1,
  "visitId": null,
}
`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail in case the cart is not the user's 1`] = `[Error: GraphQL error: Cart is missing]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail without a cart 1`] = `[Error: GraphQL error: Cart is missing: test_NOT_EXSISTING_CART]`;

exports[`CreatOrderFromCart mutation test should create an order from a valid cart with server: fail without a unit 1`] = `[Error: GraphQL error: GraphQL error: Unit DIFFERENT_UNITID in the cart cannot be fetched from the database.]`;

exports[`CreatOrderFromCart mutation test should fail in case the cart is not the user's 1`] = `"Cart is missing"`;

exports[`CreatOrderFromCart mutation test should fail without a unit 1`] = `[Error: GraphQL error: Unit DIFFERENT_UNITID in the cart cannot be fetched from the database.]`;
